# aws-lambda-rust

./: .gitattributes  .gitignore  .projenrc.ts  API.md  Dockerfile  README.md  package.json
.github/workflows/: build.yml  release.yml  upgrade-cdklabs-projen-project-types.yml  upgrade-dev-deps-main.yml  upgrade-dev-deps.yml  upgrade-main.yml  upgrade.yml
.projen/: deps.json  files.json  tasks.json
rosetta/: default.ts-fixture
src/: Dockerfile  bundling.ts  crate-installation.ts  function.ts  index.ts  package-manager.ts  types.ts  util.ts
test/: bundling.test.ts  docker.test.ts  function.test.ts  integ.function-arm.ts  integ.function-bins.ts  integ.function-workspace.ts  integ.function.ts  package-manager.test.ts  tsconfig.json  util.test.ts
test/function.test.binary1/: Cargo.toml
test/integ.function-arm.ts.snapshot/: integ-lambda-rust-function-arm.assets.json  integ-lambda-rust-function-arm.template.json  integ.json  lambdarustfunctionDefaultTestDeployAssert1211A947.assets.json  lambdarustfunctionDefaultTestDeployAssert1211A947.template.json  manifest.json  tree.json
test/integ.function-bins.ts.snapshot/: integ-lambda-rust-function-bins.assets.json  integ-lambda-rust-function-bins.template.json  integ.json  lambdarustfunctionDefaultTestDeployAssert1211A947.assets.json  lambdarustfunctionDefaultTestDeployAssert1211A947.template.json  manifest.json  tree.json
test/integ.function-workspace.ts.snapshot/: integ-lambda-rust-function-workspace.assets.json  integ-lambda-rust-function-workspace.template.json  integ.json  manifest.json  (+3 more)
test/rust-bins/: Cargo.toml
(+14 files in other folders)
